Fixed alignment of header links

--- a/style.css
+++ b/style.css
@@ -25,8 +25,10 @@ body{
 }
 
 .hero .image{
-    background-color: lightgrey;
+    background-color: darkgrey;
     flex: 1;
+    flex-direction: column;
+    text-align: center;
 }
 
 .hero .content{
@@ -47,7 +49,7 @@ a{
 }
 
 .header{
-    display:flex;
+    display: flex;
     padding-left: 128px;
     padding-right: 128px;
     padding-top: 16px;
@@ -61,12 +63,6 @@ a{
     flex: 1;
 }
 
-.header-links{
-    display: flex;
-    align-content: right;
-    flex: 1;
-}
-
 .quote{
     background-color: #E5E7EB;
     font-size: 36px;
@@ -77,7 +73,7 @@ a{
 }
 
 .author{
-    font-style: bold;
+    font-weight: 900;
     text-align: right;
 }
 
@@ -96,7 +92,10 @@ button{
 }
 
 .cards{
+    display: flex;
     padding: 128px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .card-container{
@@ -120,7 +119,6 @@ button{
     font-size: 36px;
     color: #1F2937;
     font-weight: 900;
-    text-align: center;
 }
 
 .card-image{
@@ -146,13 +144,10 @@ button{
     margin-bottom: 128px;
     padding: 64px;
 }
-/* 
-.cta-heading{
-
-} */
 
 .cta button{
     border-color: white;
+    border-width: 2px;
 }
 
 .footer{
